--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "api-server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "serve" : "json-server --watch db.json"
+    "serve" : "json-server --watch db.json",
+    "start" : "node server.js"
   },
   "author": "Sirojkhuja Muminkhodjaev",
   "license": "ISC",
